attempted fix buffer text on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -269,7 +269,7 @@ body {
   border-right: solid 5px rgba(255,255,255,.75);
   white-space: nowrap;
   overflow: hidden;    
-  font-size: 4svw;
+  font-size: 5vw;
   color: var(--color-primary);
   /*
   rgba(255,255,255,.70);
@@ -281,7 +281,7 @@ body {
 
 @keyframes animated-text{
   from{width: 0;}
-  to{width: 52svw;}
+  to{width: 64vw;}
 }
 
 @keyframes animated-cursor{
